--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: home
 feature_image: feature-san-fran
-title: Writer
-desc: Short stories from around the campfire for a fellow world explorer.
+title: Entrepreneur
+desc: A blog for people like me, Entrepreneurs
 include_cta_btn: true
 cta_text: Newsletter
-cta_link: /about/
+cta_link: /contact/
 cta_icon: fa-user-plus
 ---
